--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -5,7 +5,7 @@
 			    <script type="text/javascript">
 			        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 			        var disqus_shortname = '{{ site.disqus_shortname }}'; 
-			        var disqus_identifier = '{{ page.url }}';
+			        //var disqus_identifier = '{{ page.url }}';
 
 			        /* * * DON'T EDIT BELOW THIS LINE * * */
 			        (function() {
@@ -16,5 +16,4 @@
 			    </script>
 			    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 			{% endif %}
-
 
