--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -6,7 +6,7 @@ noindex: true
 ---
 <div class="row">
 	<div class="medium-8 columns t30">
-		{% include news.html %}
+		{% include pagination.html %}
 	</div><!-- /.medium-7.columns -->
 
 </div><!-- /.row -->
