--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -68,7 +68,7 @@ format: blog-index
 
     <div class="row">
         <div class="medium-6 columns">
-            {% for post in site.posts limit:1 %}
+            {% for post in site.categories.news limit:1 %}
             {% if post.subheadline %}<p class="subheadline">{{ post.subheadline }}</p>{% endif %}
             <h2><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h2>
             <p>
@@ -81,7 +81,7 @@ format: blog-index
 
         <div class="medium-6 columns">
             <p><strong>{{ site.data.language.more_articles }}</strong></p>
-            {% include list-posts.html entries='3' offset='1' %}
+            {% include list-posts.html entries='3' offset='1' category  = 'news' %}
         </div><!-- /.medium-7.columns -->
     </div><!-- /.row -->
 {% endunless %}
