--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -65,10 +65,14 @@ body.video cite { color: #fff; }
 ------------------------------------------------------------------- */
 
 #masthead {
-    background: $primary-color;
+    //background: $primary-color;
+    border-bottom: 1px solid #334D5C
+ ;
 }
 #masthead-no-image-header {
-    background: $primary-color;
+    //background: $primary-color;
+     border-bottom: 1px solid #334D5C
+ ;
 }
 #masthead-with-text {
     text-align: center;
