Adjusting the template to new colours

--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -65,12 +65,12 @@ body.video cite { color: #fff; }
 ------------------------------------------------------------------- */
 
 #masthead {
-    //background: $primary-color;
+    background: #45B29D;
     border-bottom: 1px solid #334D5C
  ;
 }
 #masthead-no-image-header {
-    //background: $primary-color;
+     background: #45B29D;     
      border-bottom: 1px solid #334D5C
  ;
 }
@@ -107,6 +107,7 @@ body.video cite { color: #fff; }
     }
     #masthead-with-background-color {
         padding: 15px 0;
+
     }
     #masthead-with-text {
         height: 220px;
