--- a/_sass/_06_typography.scss
+++ b/_sass/_06_typography.scss
@@ -1,4 +1,4 @@
-/* TOC – Typography 
+/* TOC – Typography
 
 Check typography variables › _3_typography_settings.scss
 
@@ -47,7 +47,7 @@ a:active {
 /* Customize Foundation Typography
 ------------------------------------------------------------------- */
 
-p { 
+p {
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     -ms-hyphens: auto;
@@ -124,6 +124,7 @@ img { border-radius: $global-radius;}
 
 figure {
     margin: 0 0 rem-calc(30) 0;
+    background-color: #04BFBF;
 }
 #masthead-with-background-color figure,
 #masthead-with-pattern figure {
@@ -234,9 +235,9 @@ blockquote {
     margin: 0 30px 30px 30px;
     color: #4b4b4d
 }
- 
+
     blockquote p {font-style: italic; color: $grey-10; }
- 
+
     blockquote:before {
         display:block;content:"\00BB";
         font-size:80px;
@@ -327,7 +328,7 @@ mark {
 .footnotes {
     margin-top: 60px;
 }
-.footnotes ol { 
+.footnotes ol {
     font-size: $font-size-small;
 }
 
