Adjusting colours in the footer

--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -70,7 +70,7 @@ body.video cite { color: #fff; }
  ;
 }
 #masthead-no-image-header {
-     background: #45B29D;     
+     background: #45B29D;
      border-bottom: 1px solid #334D5C
  ;
 }
@@ -285,8 +285,8 @@ body.video cite { color: #fff; }
 ------------------------------------------------------------------- */
 
 #subfooter {
-    background: $subfooter-bg;
-    color: $subfooter-color;
+    background: #45B29D;
+    color: #111;
     padding-top: 30px;
     padding-bottom: 10px;
 }
